Working condition of Code

--- a/OnionArchitecture_CQRS_Dapper/OnionArchitecture_CQRS_Dapper.csproj
+++ b/OnionArchitecture_CQRS_Dapper/OnionArchitecture_CQRS_Dapper.csproj
@@ -5,11 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\ApplicationLayer\ApplicationLayer.csproj" />
   </ItemGroup>
 
 </Project>
