--- a/OnionArchitecture_CQRS_Dapper/appsettings.json
+++ b/OnionArchitecture_CQRS_Dapper/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-UUBJ14C\\SQLEXPRESS;Database=OrderDb;Trusted_Connection=True;"
+  }
 }
